# MachineLearningMoE

./: .gitignore  README.md  prd.md  pyproject.toml  requirements.txt
reports/: baseline_comparison_template.csv  benchmark_results_template.csv  experiment_report_template.md
run/: run_routing_table.py
scripts/: benchmark.py  compare_baselines.py  evaluate.py  plot_food101_results.py  run_food101_experiment.py  run_wikitext2_experiment.py  train.py
src/moe_project/: __init__.py  baselines.py  config.py  data.py  experts.py  language_model.py  metrics.py  model.py  router.py  tensor_ops.py  transformer.py
