[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kmeans-moe"
version = "0.1.0"
description = "A K-Means routed MoE project for routing feasibility and baseline comparison"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.1",
  "numpy>=1.24,<2",
  "scikit-learn>=1.4",
  "pyyaml>=6.0",
  "tqdm>=4.66",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
